Fixed cropper's modal which was broken, all others were okay

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -52,7 +52,6 @@
 
 @media (max-width: 767px) and (max-height: 270px) {
   .modal-overlay[data-modal-type='image-cropper'] .modal-content {
-    top: 70%;
     width: 90vw;
     height: 60vh;
   }
@@ -60,7 +59,6 @@
 
 @media (max-width: 767px) and (min-height: 271px) and (max-height: 450px) {
   .modal-overlay[data-modal-type='image-cropper'] .modal-content {
-    top: 40%;
     width: 90vw;
     height: 70vh;
   }
@@ -68,7 +66,6 @@
 
 @media (max-width: 767px) and (min-height: 451px) and (max-height: 720px) {
   .modal-overlay[data-modal-type='image-cropper'] .modal-content {
-    top: 25%;
     width: 90vw;
     height: 70vh;
   }
@@ -76,7 +73,6 @@
 
 @media (max-width: 767px) and (min-height: 721px) and (max-height: 1150px) {
   .modal-overlay[data-modal-type='image-cropper'] .modal-content {
-    top: 15%;
     width: 90vw;
     height: 70vh;
     max-height: 600px;
@@ -88,7 +84,6 @@
     width: 90vw;
     height: 70vh;
     max-height: 600px;
-    bottom: 10%;
   }
 }
 
